--- a/bedrock/build.gradle
+++ b/bedrock/build.gradle
@@ -11,7 +11,7 @@ android {
         minSdkVersion 21
         targetSdkVersion 28
         versionCode 1
-        versionName "1.0.0-dev11"
+        versionName "1.0.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -29,12 +29,6 @@ android {
 
 androidExtensions {
     experimental = true
-}
-
-kotlin {
-    experimental {
-        coroutines "enable"
-    }
 }
 
 dependencies {
@@ -57,6 +51,8 @@ dependencies {
     // Dagger 2
     implementation "com.google.dagger:dagger:$dagger2Version"
     implementation "com.google.dagger:dagger-android-support:$dagger2Version"
+    kapt "com.google.dagger:dagger-android-processor:$dagger2Version"
+    kapt "com.google.dagger:dagger-compiler:$dagger2Version"
 }
 
 // Publish
