--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,14 @@
 buildscript {
     ext {
-        kotlinVersion = "1.2.71"
-        kotlinCoroutinesVersion = "0.30.2"
+        kotlinVersion = "1.3.0-rc-198"
+        kotlinCoroutinesVersion = "1.0.0-RC1"
         conductorVersion = "2.1.5"
         lifecycleVersion = "2.0.0"
         jetpackVersion = "1.0.0"
-        dagger2Version = "2.16" // TODO update after Jetifier bug is fixed
+        dagger2Version = "2.18"
 
         dependenciesVersion = "0.20.0"
-        buildToolsVersion = "3.2.0"
+        buildToolsVersion = "3.2.1"
         androidMavenPublishVersion = "3.6.2"
     }
 
@@ -20,6 +20,10 @@ buildscript {
     dependencies {
         // Android
         classpath "com.android.tools.build:gradle:$buildToolsVersion"
+
+        // Jetifier
+        // TODO remove this when new jetifier is included in latest AGP - https://issuetracker.google.com/issues/115738511
+        classpath "com.android.tools.build.jetifier:jetifier-processor:1.0.0-beta02"
 
         // Kotlin
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
