--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,11 @@
 buildscript {
     ext {
-        kotlinVersion = "1.3.0-rc-198"
-        kotlinCoroutinesVersion = "1.0.0-RC1"
+        kotlinVersion = "1.3.0"
+        kotlinCoroutinesVersion = "1.0.0"
         conductorVersion = "2.1.5"
         lifecycleVersion = "2.0.0"
         jetpackVersion = "1.0.0"
-        dagger2Version = "2.18"
+        dagger2Version = "2.19"
 
         dependenciesVersion = "0.20.0"
         buildToolsVersion = "3.2.1"
