Do not crash when controller lifecycle is in invalid state
Probably this is due to some rare edge case in conductor which
probably calls destroy lifecycle twice. In that case no leak occurs.

* Updated dependencies

--- a/bedrock/build.gradle
+++ b/bedrock/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     api Libs.coreKtx
 
     api Libs.conductor
+    implementation Libs.timber
 
     api Libs.dagger
     api Libs.daggerAndroid
