--- a/build.gradle
+++ b/build.gradle
@@ -2,13 +2,9 @@ buildscript {
     repositories {
         google()
         jcenter()
-        maven {
-            url "http://storage.googleapis.com/r8-releases/raw"
-        }
     }
 
     dependencies {
-        classpath 'com.android.tools:r8:1.4.88' // TODO needed for proper Boolean.hashCode desugaring https://issuetracker.google.com/issues/129730297
         classpath Libs.androidGradlePlugin
         classpath Libs.kotlinGradlePlugin
         classpath Libs.dependenciesGradlePlugin
@@ -31,6 +27,25 @@ allprojects {
 }
 
 apply plugin: "com.github.ben-manes.versions"
+
+dependencyUpdates.resolutionStrategy {
+    componentSelection { rules ->
+        rules.all { ComponentSelection selection ->
+            def exclusions = []
+            switch (selection.candidate.group) {
+                case 'com.android.tools.build' : exclusions = ['alpha']; break
+                case 'com.android.tools.lint' : exclusions = ['alpha']; break
+                case 'org.jetbrains.kotlinx' : exclusions = ['eap']; break
+            }
+            boolean rejected = exclusions.any { qualifier ->
+                selection.candidate.version ==~ /(?i).*[.-]$qualifier[.\d-+]*/
+            }
+            if (rejected) {
+                selection.reject('Release candidate')
+            }
+        }
+    }
+}
 
 task clean(type: Delete) {
     delete rootProject.buildDir
