Updated dagger to version 2.24
* Updated other dependencies

--- a/bedrock/build.gradle
+++ b/bedrock/build.gradle
@@ -57,6 +57,7 @@ dependencies {
 }
 
 // Publish
+
 publishing {
     publications {
         mavenAar(MavenPublication) {
@@ -70,8 +71,8 @@ publishing {
         maven {
             url "s3://no.apps.maven.s3.amazonaws.com"
             credentials(AwsCredentials) {
-                accessKey rootProject.properties["maven.access"]
-                secretKey rootProject.properties["maven.secret"]
+                accessKey rootProject.properties["maven_access"]
+                secretKey rootProject.properties["maven_secret"]
             }
         }
     }
