--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -10,7 +10,7 @@ pipelines:
         name: Build app
         image: androidsdk/android-30
         script:
-          - bash ./gradlew clean assembleRelease -Pmaven_access=$MAVEN_ACCESS -Pmaven_secret=$MAVEN_SECRET
+          - bash ./gradlew clean assembleRelease -Pmaven_access=$MAVEN_ACCESS -Pmaven_secret=$MAVEN_SECRET -Pmaven_repo=$MAVEN_REPO
     - step:
         caches:
           - gradle
@@ -19,4 +19,4 @@ pipelines:
         trigger: manual
         deployment: production
         script:
-          - bash ./gradlew :bedrock:publish -Pmaven_access=$MAVEN_ACCESS -Pmaven_secret=$MAVEN_SECRET
+          - bash ./gradlew :bedrock:publish -Pmaven_access=$MAVEN_ACCESS -Pmaven_secret=$MAVEN_SECRET -Pmaven_repo=$MAVEN_REPO
